# rhyolite

./: .gitignore  .gitmodules  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  test
alloc/: Cargo.toml
alloc/src/: buffer.rs  lib.rs
assets/: game_of_life.comp  game_of_life.playout  game_of_life_init.comp
assets/shaders/: draw.playout  egui.frag  egui.vert
async_ash_macro/: Cargo.toml
async_ash_macro/src/: commands.rs  gpu.rs  lib.rs  transformer.rs
bevy/: Cargo.toml
bevy/examples/: example.comp  filter.comp  filter.rs  simple.rs
bevy/src/: image.rs  lib.rs  queue.rs  swapchain.rs  types.rs
bevy/src/loaders/: png.rs
core/: Cargo.toml
core/src/: allocator.rs  debug.rs  device.rs  dho.rs  instance.rs  lib.rs  physical_device.rs  render_pass.rs  sampler.rs  shader.rs  surface.rs  swapchain.rs
core/src/accel_struct/: blas.rs  build.rs  mod.rs
core/src/commands/: pool.rs
core/src/descriptor/: layout.rs  mod.rs  pool.rs
core/src/future/: block.rs  exec.rs  ext.rs  mod.rs  state.rs
core/src/pipeline/: compute.rs  layout.rs  mod.rs  rtx.rs  sbt.rs
core/src/queue/: compile.rs  exec.rs  mod.rs  router.rs
core/src/resources/: alloc.rs  buffer.rs  copy.rs  image.rs  image_view.rs  managed_buffer.rs  managed_buffer_vec.rs  mod.rs  staging_ring_buffer.rs
core/src/utils/: format.rs  merge_ranges.rs  mod.rs  retainer.rs
crates/egui/: Cargo.toml  process_assets.sh
crates/egui/examples/: test.rs
crates/egui/src/: draw.playout  lib.rs  process_assets.rs
crates/gizmos/: Cargo.toml  process_assets.sh
crates/gizmos/assets/: gizmo.frag  gizmo.vert
crates/gizmos/src/: lib.rs
crates/macro/: BUILD.bazel  Cargo.toml
crates/macro/src/: lib.rs
crates/rtx/: Cargo.toml
crates/rtx/src/: accel_struct.rs  blas.rs  lib.rs  pipeline.rs  sbt.rs  tlas.rs
examples/: clear.rs  game_of_life.rs  show_img.rs  test.rs
macro/: Cargo.toml
macro/src/: commands.rs  glsl.rs  gpu.rs  lib.rs  set_layout.rs  transformer.rs
src/: accel_struct.rs  access.rs  alloc.rs  buffer.rs  command.rs  command_pool.rs  debug.rs  deferred.rs  device.rs  dispose.rs  extensions.rs  features.rs  future.rs  image.rs  instance.rs  lib.rs  main.rs  physical_device.rs  plugin.rs  query_pool.rs  queue.rs  sampler.rs  semaphore.rs  surface.rs  swapchain.rs  sync.rs  task.rs  types.rs
src/buffer/: ext.rs  immediate_buffer_transfer.rs  managed.rs  mod.rs  staging.rs
src/commands/: closure.rs  combinator.rs  compute.rs  image.rs  mod.rs  pool.rs  render.rs  transfer.rs
src/ecs/: commands.rs  config.rs  mod.rs  pass.rs  per_frame.rs  res.rs  res_instance.rs  system.rs  tests.rs
src/ecs2/: mod.rs  param.rs  pass.rs  system.rs
src/future/: block.rs  commands.rs  context.rs  ctx.rs  exec.rs  ext.rs  join.rs  mod.rs  res.rs  state.rs
src/pipeline/: cache.rs  compute.rs  graphics.rs  layout.rs  mod.rs  ray_tracing.rs  sbt.rs
src/queue/: exec.rs  mod.rs  router.rs
src/resources/: buffer.rs  image.rs  mod.rs
src/shader/: glsl.rs  mod.rs  spirv.rs
src/utils/: asset.rs  format.rs  future.rs  mod.rs  resource_pool.rs  ring.rs  send.rs
