[package]
name = "rhyolite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "crates/*",
]

[features]
default = ["glsl", "playout"]
glsl = ["shaderc"]

[dependencies]
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
bevy = { version = "0.13", default-features = false, features=["multi-threaded","wayland", "x11", "bevy_asset", "asset_processor", "file_watcher"] }
ash = "0.38"
tracing = "0.1"
log = { version = "0.4", features = ["kv"] }
cstr = "0.2"
thread_local = "1"
winit = { version = "0.29", default-features = false, features = ["rwh_06"] }
raw-window-handle = "0.6"
arrayvec = "0.7"
itertools = "0.12"
vk-mem = { git = "https://github.com/gwihlidal/vk-mem-rs", branch = "ash-0.38" }
thiserror = "1.0"
playout = { path = "../playout", optional = true }
once_cell = "1.19"
bytemuck = "1.15"

# GLSL
shaderc = { version = "0.8", optional = true, features = ["prefer-static-linking"] }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
raw-window-metal = "0.4"

[patch.crates-io]
bevy = { path = "../bevy" }
ash = { git = "https://github.com/Neo-Zhixing/ash.git", branch = "meta" }

[dev-dependencies]
playout_macro = { path = "../playout/macro" }
