[package]
name = "rhyolite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "crates/*",
]

[features]
default = ["glsl", "playout"]
glsl = ["shaderc"]

[dependencies]
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
ash = "0.38"
tracing = "0.1"
log = { version = "0.4", features = ["kv"] }
cstr = "0.2"
thread_local = "1"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
raw-window-handle = "0.6"
arrayvec = "0.7"
itertools = "0.12"
vk-mem = "0.4"
thiserror = "1.0"
playout = { version = "0.1", optional = true }
once_cell = "1.19"
bytemuck = "1.15"
petgraph = "0.6"
smallvec = "1.13"
rhyolite_macros = { path = "./crates/macro" }
shaderc = { version = "0.8", optional = true, features = ["prefer-static-linking"] }

[dependencies.bevy]
version = "0.15.0-dev"
default-features = false
features = ["multi_threaded","wayland", "x11", "bevy_asset", "asset_processor", "file_watcher", "bevy_window"]

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
raw-window-metal = "0.4"

[patch.crates-io]
bevy = { git = "https://github.com/Neo-Zhixing/bevy.git", branch = "rhyolite-main" }
bevy_app = { git = "https://github.com/Neo-Zhixing/bevy.git", branch = "rhyolite-main" }
bevy_derive = { git = "https://github.com/Neo-Zhixing/bevy.git", branch = "rhyolite-main" }
bevy_ecs = { git = "https://github.com/Neo-Zhixing/bevy.git", branch = "rhyolite-main" }
bevy_input = { git = "https://github.com/Neo-Zhixing/bevy.git", branch = "rhyolite-main" }
bevy_log = { git = "https://github.com/Neo-Zhixing/bevy.git", branch = "rhyolite-main" }
bevy_math = { git = "https://github.com/Neo-Zhixing/bevy.git", branch = "rhyolite-main" }
bevy_reflect = { git = "https://github.com/Neo-Zhixing/bevy.git", branch = "rhyolite-main" }
bevy_time = { git = "https://github.com/Neo-Zhixing/bevy.git", branch = "rhyolite-main" }
bevy_utils = { git = "https://github.com/Neo-Zhixing/bevy.git", branch = "rhyolite-main" }
bevy_winit = { git = "https://github.com/Neo-Zhixing/bevy.git", branch = "rhyolite-main" , features = ["custom_cursor"] }
bevy_window = { git = "https://github.com/Neo-Zhixing/bevy.git", branch = "rhyolite-main" }


ash = { git = "https://github.com/Neo-Zhixing/ash.git", branch = "meta" }

[dev-dependencies]
playout_macro = { version = "0.1" }
