module(
    name = "rhyolite",
    version = "0.0.0",
)

bazel_dep(name = "rules_rust", version = "0.57.1")
local_path_override(
    module_name = "rules_rust",
    path = "../rules_rust",
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//:crates/egui/Cargo.toml",
        "//:crates/gizmos/Cargo.toml",
        "//:crates/macro/Cargo.toml",
        "//:crates/rtx/Cargo.toml",
    ],
)
use_repo(crate, "crates")
