[package]
name = "rhyolite-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhyolite = { path = "../core" }
bevy_app = { git = "https://github.com/bevyengine/bevy.git", rev = "e9312254d8906e9f491c4f3761659df0d179687f" }
bevy_tasks = { git = "https://github.com/bevyengine/bevy.git", rev = "e9312254d8906e9f491c4f3761659df0d179687f" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", rev = "e9312254d8906e9f491c4f3761659df0d179687f" }
bevy_window = { git = "https://github.com/bevyengine/bevy.git", rev = "e9312254d8906e9f491c4f3761659df0d179687f" }
bevy_asset = { git = "https://github.com/bevyengine/bevy.git", rev = "e9312254d8906e9f491c4f3761659df0d179687f" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", rev = "e9312254d8906e9f491c4f3761659df0d179687f" }
bevy_a11y = { git = "https://github.com/bevyengine/bevy.git", rev = "e9312254d8906e9f491c4f3761659df0d179687f" }
thread_local = "^1"
event-listener = "2.5.1"
blocking = "1.2"
crossbeam-channel = "^0.5"
tracing = "0.1"
png = "0.17"


[dev-dependencies]
image = "0.24"
pin-project = "1.0"
reqwest = { version = "*", features = ["blocking"] }
bevy_log = { git = "https://github.com/bevyengine/bevy.git", rev = "e9312254d8906e9f491c4f3761659df0d179687f" }
bevy_input = { git = "https://github.com/bevyengine/bevy.git", rev = "e9312254d8906e9f491c4f3761659df0d179687f" }
bevy_core = { git = "https://github.com/bevyengine/bevy.git", rev = "e9312254d8906e9f491c4f3761659df0d179687f" }
bevy_hierarchy = { git = "https://github.com/bevyengine/bevy.git", rev = "e9312254d8906e9f491c4f3761659df0d179687f" }
bevy_transform = { git = "https://github.com/bevyengine/bevy.git", rev = "e9312254d8906e9f491c4f3761659df0d179687f" }
bevy_winit = { git = "https://github.com/bevyengine/bevy.git", rev = "e9312254d8906e9f491c4f3761659df0d179687f" }
bevy_time = { git = "https://github.com/bevyengine/bevy.git", rev = "e9312254d8906e9f491c4f3761659df0d179687f" }
bevy_diagnostic = { git = "https://github.com/bevyengine/bevy.git", rev = "e9312254d8906e9f491c4f3761659df0d179687f" }
