[package]
name = "rhyolite-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.2"
ash-window = "0.12"
raw-window-handle = "0.5"
tracing = "0.1"
rhyolite-macro = { path = "../macro" }
vk-mem = { git = "https://github.com/dust-engine/vk-mem-rs" }
blocking = "1.2"
pin-project = "1.0"
cstr = "0.2"
crossbeam-channel = "0.5"
