[package]
name = "rhyolite"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dust-engine/rhyolite"
license = "MIT OR Apache-2.0"
categories = ["game-engines", "graphics", "gui", "rendering"]
description = "A refreshingly simple data-driven game engine and app framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.2"
ash-window = "0.12"
raw-window-handle = "0.5"
tracing = "0.1"
rhyolite-macro = { path = "../macro", version = "0.1.0" }
vk-mem = { git = "https://github.com/dust-engine/vk-mem-rs", rev = "999637df5a05e86c180d3ca31f70ff8a09ef6db2" }
blocking = "1.2"
pin-project = "1.0"
cstr = "0.2"
crossbeam-channel = "0.5"
