[package]
name = "rhyolite_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy_egui]
version = "0.31"
git = "https://github.com/Neo-Zhixing/bevy_egui.git"
rev = "0417e2a17aec5c36ab7293a9166407206fc4ba24"
default-features = false
features = ["manage_clipboard", "open_url", "default_fonts"]

[dependencies]
bevy = { version = "0.15.0-dev", default-features = false }
rhyolite = { path = "../../" }
playout_macro = { version = "0.1" }
bytemuck = "1.15"


[[bin]]
name = "process-assets"
path = "src/process_assets.rs"
required-features = ["bevy/asset_processor"]
