[package]
name = "rhyolite_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy_egui]
version = "0.31"
git = "https://github.com/Neo-Zhixing/bevy_egui.git"
rev = "526bcb804f8227e7920cc7ad1f51b40ba7f0eaf6"
default-features = false
features = ["manage_clipboard", "open_url", "default_fonts"]

[dependencies]
bevy = { version = "0.15.0-dev", default-features = false }
rhyolite = { path = "../../" }
playout_macro = { version = "0.1" }
bytemuck = "1.21"
egui = { version = "0.30", default-features = false, features = ["bytemuck"] }


[[bin]]
name = "process-assets"
path = "src/process_assets.rs"
required-features = ["bevy/asset_processor"]
