load("@crates//:defs.bzl", "aliases", "all_crate_deps", "crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_proc_macro")

package(default_visibility = ["//visibility:public"])

rust_proc_macro(
    name = "rhyolite_macros",
    srcs = glob([
        "src/**/*.rs",
    ]),
    deps = all_crate_deps(
        normal = True
    ),
)
